[tool.poetry]
name = "wallet_management_tools"
version = "0.1.0"
description = "Python 项目"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alive-progress = "3.1.4"
art = "5.9"
loguru = "0.6.0"
requests = "2.28.2"
termcolor = "2.3.0"
tls-client = "0.2.1"
tabulate = "0.9.0"
setuptools = "65.0.0"
python-dotenv = "1.0.1"
web3 = "7.12.0"
httpx = "0.28.1"
solana = "0.36.6"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
